<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autonomous_explorer</name>
  <version>1.0.0</version>
  <description>Autonomous exploration package for mobile robots using frontier-based exploration with Nav2</description>
  <maintainer email="z@todo.todo">z</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>python3-numpy</depend>
  <depend>python3-opencv</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
